wk_taa_taaqa/src/objects/Zip_Assignment_Table__c.object
<CustomObject>
    <fields>
        <fullName>CAM_DTN__c</fullName>
        <label>CAM DTN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <label>CAM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_ISC_DTN__c</fullName>
        <label>ISC DTN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_ISC__c</fullName>
        <label>ISC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_RC_DTN__c</fullName>
        <label>RC DTN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_RC__c</fullName>
        <label>RC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_RSC_DTN__c</fullName>
        <label>RSC DTN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_RSC__c</fullName>
        <label>RSC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Zip Assignment Table</label>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>CAM__c</columns>
        <columns>CAM_DTN__c</columns>
        <columns>Software_ISC__c</columns>
        <columns>Software_ISC_DTN__c</columns>
        <columns>Software_RC__c</columns>
        <columns>Software_RC_DTN__c</columns>
        <columns>Software_RSC__c</columns>
        <columns>Software_RSC_DTN__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Zip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Assignment Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>